<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="account_name">Name of customer</string>
    <string name="account_number">ACCOUNT NUMBER</string>
    <string name="Amount">Amount</string>
    <string name="deposit">Deposit(Account Name)</string>
    <string name="depo">Deposit</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="deposit2">Deposit(Account Number)</string>
    <string name="showaccount">Show All Accounts</string>
    <string name="post_deposit">POST DEPOSIT</string>
    <string name="preview">FieldPrint</string>
    <string name="repay">Repayment</string>
    <string name="clear_all_transactions">Clear all transactions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maintab">MaintabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="post_repayment">PostRepayment</string>
    <string name="postGroup">Post Group</string>
    <string name="groupposting">GROUP POSTING</string>
    <string name="title_activity_group">Group Posting</string>

</resources>
