<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".searchActivity" android:orientation="vertical">

    <SearchView
            android:layout_width="561dp"
            android:layout_height="wrap_content"
            android:id="@+id/simpleSearchView"
            android:queryHint="Search Client name"

            android:background="#0f0"

    />
    <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listView"
            android:queryHint="Type Name"

            android:background="#0ff"
    />
    <EditText
            android:layout_width="390dp"
            android:layout_height="51dp"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:hint="@string/account_name"
            android:id="@+id/searchname"
            android:focusable="false"
            android:onClick="press"


    />
    <EditText
            android:layout_width="384dp"
            android:layout_height="78dp"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:hint="@string/account_number"
            android:id="@+id/searchAcno"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/Amount"
            android:ems="10"
            android:id="@+id/searchamount"
    />
    <Button
            android:text="@string/post_deposit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchbtndeposit"
            android:onClick="post"

    />
</LinearLayout>

