<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal"
        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".optionActivity">

    <Button
            android:text="@string/deposit"
            android:layout_width="221dp"
            android:layout_height="wrap_content"
            android:id="@+id/btndeposit"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="36dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="68dp"
            app:layout_constraintHorizontal_bias="0.333"/>
    <Button
            android:text="@string/add_new_customer"
            android:layout_width="229dp"
            android:layout_height="37dp"
            android:id="@+id/btndaddnew"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/viewaccount"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="68dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.36"/>
    <Button
            android:text="@string/deposit2"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:id="@+id/PostByAcno"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/btndaddnew"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="68dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.383"/>
    <Button
            android:text="@string/post_repayment"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:id="@+id/postloan"
            android:layout_marginTop="92dp"
            app:layout_constraintTop_toBottomOf="@+id/PostByAcno" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.296"/>
    <Button
            android:text="@string/postGroup"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:id="@+id/postboth"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/PostByAcno" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.255"/>
    <Button
            android:text="@string/showaccount"
            android:layout_width="227dp"
            android:layout_height="53dp"
            android:id="@+id/viewaccount"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="68dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.361"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/btndeposit"/>
    <TextView
            android:text=""
            android:id="@+id/cashbal"
            android:textColor="#0f0"
            android:layout_width="155dp"
            android:layout_height="61dp"


            style="@android:style/TextAppearance.Large"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.358"
            android:layout_marginTop="56dp" app:layout_constraintTop_toBottomOf="@+id/postloan"/>


</androidx.constraintlayout.widget.ConstraintLayout>