<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".addnewActivity">
    <Button
            android:text="SAVE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btndaddnew"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="92dp" app:layout_constraintTop_toBottomOf="@+id/amount"/>
    <EditText
            android:layout_width="211dp"
            android:layout_height="42dp"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/account_name"
            android:ems="10"
            android:id="@+id/name"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.819"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/account_number"
            android:ems="10"
            android:id="@+id/acno"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/name" android:layout_marginStart="18dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/Amount"
            android:ems="10"
            android:id="@+id/amount"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/acno" app:layout_constraintHorizontal_bias="0.498"/>
</androidx.constraintlayout.widget.ConstraintLayout>

